feat: update manifest proposedName (#171)
Closes #169

--- a/packages/snap/snap.manifest.json
+++ b/packages/snap/snap.manifest.json
@@ -1,13 +1,13 @@
 {
   "version": "0.6.0",
   "description": "The Polkadot snap.",
-  "proposedName": "Polkadot snap",
+  "proposedName": "Polkadot Wallet",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/chainsafe/metamask-snap-polkadot.git"
   },
   "source": {
-    "shasum": "MRjDtG/in/3/s3f8BJAY56Oq0jfSsZRmWIDDEB03+f8=",
+    "shasum": "DgcqyB4DvzgH0J4ZEi/gKi+pI2aGaHJJg2sZ8KjhQwQ=",
     "location": {
       "npm": {
         "filePath": "./dist/bundle.js",
