--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,5 +1,6 @@
 {
   "packages/snap": "0.6.0",
   "packages/types": "0.6.0",
-  "packages/adapter": "0.5.0"
+  "packages/adapter": "0.5.0",
+  "packages/config": "0.1.0"
 }
