--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -80,6 +80,7 @@
     "typescript": "4.7.3"
   },
   "dependencies": {
+    "@chainsafe/metamask-polkadot-config": "workspace:^",
     "@metamask/key-tree": "^9.0.0",
     "@metamask/snaps-types": "^1.0.2",
     "@metamask/snaps-ui": "^1.0.2",
