--- a/.github/workflows/ci-workflow.yaml
+++ b/.github/workflows/ci-workflow.yaml
@@ -49,7 +49,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           cache: yarn
-          node-version: '18'
+          node-version: '16.x'
       - run: corepack enable
       - name: Install
         run: yarn install --immutable
