--- a/.github/workflows/ci-workflow.yaml
+++ b/.github/workflows/ci-workflow.yaml
@@ -20,9 +20,6 @@ jobs:
         with:
           cache: yarn
           node-version: '16.x'
-      - name: Test
-        run: |
-          echo "test: ${{ github.head_ref }}"
       - run: corepack enable
       - run: yarn install --immutable
       - name: Build
@@ -31,7 +28,7 @@ jobs:
         run: yarn run lint
       - uses: tj-actions/verify-changed-files@v9
         id: verify-changed-files
-        if: github.ref_name != 'master'
+        if: github.head_ref != 'master'
         with:
           files: |
             packages/snap/snap.manifest.json
