--- a/.github/workflows/ci-workflow.yaml
+++ b/.github/workflows/ci-workflow.yaml
@@ -22,6 +22,12 @@ jobs:
           echo "${{ github.event_name }}"
           echo "${{ github.event.action }}"
           echo "${{ steps.verify-changed-files.outputs.files_changed }}"
+          echo "${{ github.head_ref }}"
+          echo "${{ github.base_ref }}"
+          echo "${{ github.ref }}"
+          echo "${{ github.ref_name }}"
+          echo "${{ github.event.pull_request.user.login }}"
+          echo "${{ github.event.issue.user.login }}"
       - uses: actions/setup-node@v3
         with:
           cache: yarn
