--- a/.github/workflows/ci-workflow.yaml
+++ b/.github/workflows/ci-workflow.yaml
@@ -16,18 +16,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: TST
-        run: |
-          echo "${{ github.event.pull_request.merged }}"
-          echo "${{ github.event_name }}"
-          echo "${{ github.event.action }}"
-          echo "${{ steps.verify-changed-files.outputs.files_changed }}"
-          echo "${{ github.head_ref }}"
-          echo "${{ github.base_ref }}"
-          echo "${{ github.ref }}"
-          echo "${{ github.ref_name }}"
-          echo "${{ github.event.pull_request.user.login }}"
-          echo "${{ github.event.issue.user.login }}"
       - uses: actions/setup-node@v3
         with:
           cache: yarn
@@ -39,14 +27,13 @@ jobs:
       - name: Run linter
         run: yarn run lint
       - uses: tj-actions/verify-changed-files@v9
+        if: github.ref_name != 'master'
         id: verify-changed-files
         with:
           files: |
             packages/snap/snap.manifest.json
       - name: Check if snap manifest updated
-        if: |
-          steps.verify-changed-files.outputs.files_changed == 'true'
-          && github.event.action != 'closed'
+        if: steps.verify-changed-files.outputs.files_changed == 'true'
         run: |
           echo "Snap manifest not updated: ${{ steps.verify-changed-files.outputs.changed_files }} 
           or @metamask/snaps-cli version is different from local version"
