--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -12,11 +12,9 @@
     "prebuild": "rm -rf build dist ipfs",
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
-    "build": "yarn run build:tsc && yarn run build:snap",
-    "build:tsc": "tsc --pretty --project tsconfig.build.json",
-    "build:snap": "yarn build:snap:bundle && yarn build:snap:postprocess && yarn build:snap:eval",
-    "build:snap:bundle": "mm-snap build -s build/index.js --verboseErrors --transpilationMode localAndDeps --stripComments --eval false",
-    "build:snap:postprocess": "mm-snap manifest --fix",
+    "build": "yarn run build:snap",
+    "build:snap": "yarn build:snap:bundle && yarn build:snap:eval",
+    "build:snap:bundle": "mm-snap build --src src/index.ts --sourceMaps true --verboseErrors",
     "build:snap:eval": "mm-snap eval -b dist/bundle.js --verboseErrors",
     "snapEval": "mm-snap eval",
     "watch": "concurrently  --raw --kill-others \"yarn run watch:tsc\" \"yarn run watch:snap\" \"yarn run serve\"",
@@ -63,6 +61,8 @@
   "devDependencies": {
     "@chainsafe/metamask-polkadot-types": "workspace:^",
     "@metamask/snaps-cli": "^2.0.2",
+    "@metamask/snaps-types": "^2.0.0",
+    "@metamask/snaps-ui": "^2.0.0",
     "@types/chai": "^4.2.10",
     "@types/mocha": "^10.0.1",
     "@types/sinon": "^7.5.2",
@@ -80,8 +80,6 @@
     "typescript": "4.7.3"
   },
   "dependencies": {
-    "@metamask/snaps-types": "^2.0.0",
-    "@metamask/snaps-ui": "^2.0.0",
     "@polkadot/api": "^10.9.1",
     "@polkadot/keyring": "^12.3.2",
     "@polkadot/types": "^10.9.1",
