--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -76,8 +76,8 @@
     "sinon": "^9.0.1",
     "sinon-chai": "^3.5.0",
     "strict-event-emitter-types": "^2.0.0",
-    "ts-node": "^8.6.2",
-    "typescript": "4.7.3"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   },
   "dependencies": {
     "@polkadot/api": "^10.9.1",
