--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@typescript-eslint/parser": "^5.27.1",
     "eslint": "^8.47.0",
     "prettier": "^3.0.2",
-    "typescript": "4.7.3"
+    "typescript": "^5.2.2"
   },
   "packageManager": "yarn@3.6.1",
   "dependencies": {
