--- a/packages/adapter/package.json
+++ b/packages/adapter/package.json
@@ -37,6 +37,6 @@
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
     "eslint": "^8.17.0",
-    "typescript": "4.7.3"
+    "typescript": "^5.2.2"
   }
 }
