--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -24,7 +24,7 @@
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "sass": "^1.26.3",
-    "typescript": "4.7.3",
+    "typescript": "^5.2.2",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
