--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "private": true,
   "author": "ChainSafe <info@chainsafe.io>",
   "license": "Apache-2.0",
+  "packageManager": "yarn@3.6.0",
   "workspaces": [
     "packages/*"
   ],
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "build:snap": "yarn workspace @chainsafe/polkadot-snap build",
     "build:adapter": "yarn workspace @chainsafe/metamask-polkadot-adapter build",
@@ -27,7 +31,6 @@
     "prettier": "^3.0.2",
     "typescript": "^5.2.2"
   },
-  "packageManager": "yarn@3.6.1",
   "dependencies": {
     "@rushstack/eslint-patch": "^1.3.3"
   }
