--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@typescript-eslint/parser": "^5.27.1",
     "eslint": "^8.47.0",
     "prettier": "^3.0.2",
-    "typescript": "^5.2.2"
+    "typescript": "5.0.3"
   },
   "dependencies": {
     "@rushstack/eslint-patch": "^1.3.3"
