--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -81,7 +81,7 @@
     "sinon-chai": "^3.5.0",
     "strict-event-emitter-types": "^2.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "5.0.3"
   },
   "dependencies": {
     "@polkadot/api": "^10.9.1",
