--- a/packages/snap/snap.manifest.json
+++ b/packages/snap/snap.manifest.json
@@ -11,6 +11,7 @@
     "location": {
       "npm": {
         "filePath": "./dist/bundle.js",
+        "iconPath": "./images/logo.svg",
         "packageName": "@chainsafe/polkadot-snap",
         "registry": "https://registry.npmjs.org/"
       }
