--- a/packages/snap/snap.manifest.json
+++ b/packages/snap/snap.manifest.json
@@ -7,11 +7,11 @@
     "url": "git+https://github.com/chainsafe/metamask-snap-polkadot.git"
   },
   "source": {
-    "shasum": "n1fP3iZ4GjAziSBKVgrTVcc2s0yzKwnRybqGeqQD35M=",
+    "shasum": "eeuMGJK7LIbSQ8zeySvPamvyjq5loFxV6uhz+6z9/pY=",
     "location": {
       "npm": {
         "filePath": "./dist/bundle.js",
-        "iconPath": "./images/logo.svg",
+        "iconPath": "images/logo.svg",
         "packageName": "@chainsafe/polkadot-snap",
         "registry": "https://registry.npmjs.org/"
       }
