--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -2,7 +2,7 @@
   "name": "@chainsafe/polkadot-snap",
   "version": "0.7.5",
   "description": "MetaMask snap for interacting with Polkadot dApps",
-  "main": "build/index.js",
+  "main": "dist/bundle.js",
   "scripts": {
     "lint": "yarn run lint:types && yarn run lint:style",
     "lint:types": "tsc --noEmit --pretty",
@@ -65,8 +65,6 @@
   "devDependencies": {
     "@chainsafe/metamask-polkadot-types": "workspace:^",
     "@metamask/snaps-cli": "^3.0.0",
-    "@metamask/snaps-types": "^3.0.0",
-    "@metamask/snaps-ui": "^3.0.0",
     "@types/chai": "^4.2.10",
     "@types/mocha": "^10.0.1",
     "@types/sinon": "^7.5.2",
@@ -84,6 +82,8 @@
     "typescript": "5.0.3"
   },
   "dependencies": {
+    "@metamask/snaps-types": "^3.0.0",
+    "@metamask/snaps-ui": "^3.0.0",
     "@polkadot/api": "^10.9.1",
     "@polkadot/keyring": "^12.3.2",
     "@polkadot/types": "^10.9.1",
