chore: pre whitelist changes  (#193)

--- a/packages/snap/snap.manifest.json
+++ b/packages/snap/snap.manifest.json
@@ -7,10 +7,11 @@
     "url": "git+https://github.com/chainsafe/metamask-snap-polkadot.git"
   },
   "source": {
-    "shasum": "QTF9vA9MFRpOxvVtSirsgZlHE5kkdkuaI6AVXoxfrlQ=",
+    "shasum": "eeuMGJK7LIbSQ8zeySvPamvyjq5loFxV6uhz+6z9/pY=",
     "location": {
       "npm": {
         "filePath": "./dist/bundle.js",
+        "iconPath": "images/logo.svg",
         "packageName": "@chainsafe/polkadot-snap",
         "registry": "https://registry.npmjs.org/"
       }
