fix dependencies so yarn install work

--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -64,7 +64,7 @@
     }
   },
   "devDependencies": {
-    "@subspace/metamask-subspace-types": "workspace:^",
+    "@subspace/metamask-subspace-types": "*",
     "@metamask/snaps-cli": "^1.0.2",
     "@types/chai": "^4.2.10",
     "@types/mocha": "^10.0.1",
