--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -81,6 +81,7 @@
   },
   "dependencies": {
     "@metamask/key-tree": "^9.1.2",
+    "@metamask/snaps-sdk": "^6.2.1",
     "@metamask/snaps-types": "^3.1.0",
     "@metamask/snaps-ui": "^3.1.0",
     "@polkadot/api": "^12.3.1",
