--- a/packages/adapter/tsconfig.json
+++ b/packages/adapter/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "ES2022",
     "outDir": "build",
     "rootDir": "src",
     "moduleResolution": "node",
