--- a/.github/workflows/ci-workflow.yaml
+++ b/.github/workflows/ci-workflow.yaml
@@ -34,8 +34,10 @@ jobs:
       - name: Check if snap manifest updated
         if: steps.verify-changed-files.outputs.files_changed == 'true'
         run: |
+          mm_snap_path=$(which mm-snap)
           echo "Snap manifest not updated: ${{ steps.verify-changed-files.outputs.changed_files }} 
           or @metamask/snaps-cli version is different from local version"
+          echo "mm-snap is located at: $mm_snap_path"
           exit 1
       - name: Run tests
         run: yarn run test
