--- a/.github/workflows/ci-workflow.yaml
+++ b/.github/workflows/ci-workflow.yaml
@@ -25,6 +25,18 @@ jobs:
         run: yarn run build
       - name: Run linter
         run: yarn run lint
+      - uses: tj-actions/verify-changed-files@v17
+        if: github.ref_name != 'master'
+        id: verify-changed-files
+        with:
+          files: |
+            packages/snap/snap.manifest.json
+      - name: Check if snap manifest updated
+        if: steps.verify-changed-files.outputs.files_changed == 'true'
+        run: |
+          echo "Snap manifest not updated: ${{ steps.verify-changed-files.outputs.changed_files }} 
+          or @metamask/snaps-cli version is different from local version"
+          exit 1
       - name: Run tests
         run: yarn run test
 
