--- a/.github/workflows/ci-workflow.yaml
+++ b/.github/workflows/ci-workflow.yaml
@@ -15,28 +15,16 @@ jobs:
     # This job runs on Linux
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: '16.x'
+          node-version: 18
       - run: corepack enable
       - run: yarn install --immutable
       - name: Build
         run: yarn run build
       - name: Run linter
         run: yarn run lint
-      - uses: tj-actions/verify-changed-files@v17
-        if: github.ref_name != 'master'
-        id: verify-changed-files
-        with:
-          files: |
-            packages/snap/snap.manifest.json
-      - name: Check if snap manifest updated
-        if: steps.verify-changed-files.outputs.files_changed == 'true'
-        run: |
-          echo "Snap manifest not updated: ${{ steps.verify-changed-files.outputs.changed_files }} 
-          or @metamask/snaps-cli version is different from local version"
-          exit 1
       - name: Run tests
         run: yarn run test
 
@@ -48,7 +36,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
+          node-version: 18
       - run: corepack enable
       - name: Install
         run: yarn install --immutable
