--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -62,7 +62,7 @@
   },
   "devDependencies": {
     "@chainsafe/metamask-polkadot-types": "workspace:^",
-    "@metamask/snaps-cli": "^1.0.2",
+    "@metamask/snaps-cli": "^6.3.0",
     "@types/chai": "^4.2.10",
     "@types/mocha": "^10.0.1",
     "@types/sinon": "^7.5.2",
@@ -72,7 +72,7 @@
     "chai": "^4.2.0",
     "concurrently": "^5.1.0",
     "eslint": "^8.17.0",
-    "mocha": "^7.1.1",
+    "mocha": "10.1.0",
     "sinon": "^9.0.1",
     "sinon-chai": "^3.5.0",
     "strict-event-emitter-types": "^2.0.0",
@@ -80,14 +80,15 @@
     "typescript": "4.7.3"
   },
   "dependencies": {
-    "@metamask/key-tree": "^9.0.0",
-    "@metamask/snaps-types": "^1.0.2",
-    "@metamask/snaps-ui": "^1.0.2",
-    "@polkadot/api": "^10.9.1",
-    "@polkadot/keyring": "^12.3.2",
-    "@polkadot/types": "^10.9.1",
-    "@polkadot/util": "^12.3.2",
+    "@metamask/key-tree": "^9.1.2",
+    "@metamask/snaps-sdk": "^6.2.1",
+    "@metamask/snaps-types": "^3.1.0",
+    "@metamask/snaps-ui": "^3.1.0",
+    "@polkadot/api": "^12.4.2",
+    "@polkadot/keyring": "^13.0.2",
+    "@polkadot/types": "^12.4.2",
+    "@polkadot/util": "^13.0.2",
     "deepmerge": "^4.3.1",
-    "superstruct": "^1.0.3"
+    "superstruct": "^2.0.2"
   }
 }
